--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta name="twitter:description" content="متخصصون في تصميم وتنفيذ المظلات والخيام الملكية والسواتر وبيوت الشعر والبرجولات في جدة">
     <meta name="twitter:image" content="images/logo.png">
 
-    <link rel="canonical" href="https://aldiyarglobal.me/" />
+    <link rel="canonical" href="https://aldiyar.me/" />
     <title>مؤسسة الديار العالمية جدة | مظلات وخيام وبرجولات</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
