--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         "latitude": "21.543333",
         "longitude": "39.172778"
       },
-      "url": "https://aldiyarglobal.com",
+      "url": "https://aldiyar.me",
       "telephone": "+9660553719009",
       "areaServed": ["جدة", "مكة المكرمة", "المنطقة الغربية"],
       "priceRange": "$$",
