--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta name="twitter:description" content="متخصصون في تصميم وتنفيذ المظلات والخيام الملكية والسواتر وبيوت الشعر والبرجولات في جدة">
     <meta name="twitter:image" content="images/logo.png">
 
-    <link rel="canonical" href="https://aldiyar.me/" />
+    <link rel="canonical" href="https://aldeyar.me/" />
     <title>مؤسسة الديار العالمية جدة | مظلات وخيام وبرجولات</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -58,7 +58,7 @@
         "latitude": "21.543333",
         "longitude": "39.172778"
       },
-      "url": "https://aldiyar.me",
+      "url": "https://aldeyar.me",
       "telephone": "+9660553719009",
       "areaServed": ["جدة", "مكة المكرمة", "المنطقة الغربية"],
       "priceRange": "$$",
