--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <meta name="google-site-verification" content="yCNYjxZgyamu7OTnl1Bxzb_3VLDOaXdIqEKj2s18ZcE" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta name="description" content="مؤسسة الديار العالمية في جدة - الشركة الرائدة في المملكة العربية السعودية في تصميم وتنفيذ المظلات، الخيام الملكية، السواتر، بيوت الشعر والبرجولات. نقدم خدماتنا في جدة والمناطق المجاورة بأعلى معايير الجودة">
