--- a/khayyam.html
+++ b/khayyam.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_SA">
     
-    <link rel="canonical" href="https://aldiyarglobal.me/khayyam.html" />
+    <link rel="canonical" href="https://aldiyar.me/khayyam.html" />
     <title>خيام ملكية في جدة | مؤسسة الديار العالمية</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -106,7 +106,7 @@
                 <div class="contact-info">
                     <a href="tel:+966553719009" class="phone-number">
                         <i class="fas fa-phone-alt"></i>
-                        <span>+966553719009</span>
+                        <span>553719009</span>
                     </a>
                 </div>
             </div>
@@ -391,7 +391,7 @@
                 <div class="footer-contact">
                     <h3>معلومات التواصل</h3>
                     <p><i class="fas fa-map-marker-alt"></i> جدة، المملكة العربية السعودية</p>
-                    <p><i class="fas fa-phone-alt"></i> <a href="tel:+966553719009">+966553719009</a></p>
+                    <p><i class="fas fa-phone-alt"></i> <a href="tel:+966553719009">553719009</a></p>
                     <p><i class="fas fa-envelope"></i> <a href="mailto:info@aldiyarglobal.com">info@aldiyarglobal.com</a></p>
                 </div>
             </div>
