--- a/khayyam.html
+++ b/khayyam.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_SA">
     
-    <link rel="canonical" href="https://aldiyar.me/khayyam.html" />
+    <link rel="canonical" href="https://aldeyar.me/khayyam.html" />
     <title>خيام ملكية في جدة | مؤسسة الديار العالمية</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
