--- a/mazallat.html
+++ b/mazallat.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_SA">
    
-    <link rel="canonical" href="https://aldiyarglobal.me/mazallat.html" />
+    <link rel="canonical" href="https://aldeyar.me/mazallat.html" />
     <title>مظلات جدة | مؤسسة الديار العالمية</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -38,7 +38,7 @@
           "addressRegion": "مكة المكرمة",
           "addressCountry": "SA"
         },
-        "telephone": "+9660553719009"
+        "telephone": "+966553719009"
       },
       "description": "تصميم وتنفيذ مختلف أنواع المظلات في جدة بأفضل الخامات وأعلى معايير الجودة",
       "areaServed": "جدة",
@@ -104,9 +104,9 @@
                     </ul>
                 </nav>
                 <div class="contact-info">
-                    <a href="tel:+9660553719009" class="phone-number">
+                    <a href="tel:+966553719009" class="phone-number">
                         <i class="fas fa-phone-alt"></i>
-                        <span>0553719009</span>
+                        <span>553719009</span>
                     </a>
                 </div>
             </div>
@@ -262,8 +262,8 @@
                 <h2>هل أنت مهتم بالحصول على خدماتنا؟</h2>
                 <p>تواصل معنا الآن للحصول على استشارة مجانية وعرض سعر مناسب.</p>
                 <div class="cta-buttons">
-                    <a href="tel:+9660553719009" class="btn primary-btn"><i class="fas fa-phone-alt"></i> اتصل الآن</a>
-                    <a href="https://wa.me/+9660553719009" class="btn whatsapp-btn"><i class="fab fa-whatsapp"></i> واتساب</a>
+                    <a href="tel:+966553719009" class="btn primary-btn"><i class="fas fa-phone-alt"></i> اتصل الآن</a>
+                    <a href="https://wa.me/+966553719009" class="btn whatsapp-btn"><i class="fab fa-whatsapp"></i> واتساب</a>
                     <a href="index.html#contact" class="btn secondary-btn">طلب عرض سعر</a>
                 </div>
             </div>
@@ -391,7 +391,7 @@
                 <div class="footer-contact">
                     <h3>معلومات التواصل</h3>
                     <p><i class="fas fa-map-marker-alt"></i> جدة، المملكة العربية السعودية</p>
-                    <p><i class="fas fa-phone-alt"></i> <a href="tel:+9660553719009">0553719009</a></p>
+                    <p><i class="fas fa-phone-alt"></i> <a href="tel:+966553719009">553719009</a></p>
                     <p><i class="fas fa-envelope"></i> <a href="mailto:info@aldiyarglobal.com">info@aldiyarglobal.com</a></p>
                 </div>
             </div>
