--- a/landscaping.html
+++ b/landscaping.html
@@ -467,7 +467,7 @@
                     <h3>معلومات التواصل</h3>
                     <p><i class="fas fa-map-marker-alt"></i> جدة، المملكة العربية السعودية</p>
                     <p><i class="fas fa-phone-alt"></i> <a href="tel:+966553719009">553719009</a></p>
-                    <p><i class="fas fa-envelope"></i> <a href="mailto:info@aldiyarglobal.com">info@aldiyarglobal.com</a></p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:fidralfidral@gmail.com">info@aldiyarglobal.com</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
