--- a/byoot_shaar.html
+++ b/byoot_shaar.html
@@ -8,7 +8,12 @@
     <meta name="keywords" content="بيوت شعر جدة, بيوت شعر ملكية, بيوت شعر عربية, بيوت شعر للمجالس, بيوت شعر للحدائق, مؤسسة الديار العالمية">
     <meta name="author" content="مؤسسة الديار العالمية">
     <meta name="robots" content="index, follow">
-    
+     <!-- روابط أيقونة الموقع (Favicon) -->
+    <link rel="icon" href="images/logo2.jpg" type="image/jpeg">
+    <link rel="shortcut icon" href="images/logo2.jpg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="images/logo2.jpg">
+    <meta name="theme-color" content="#DAA520">
+
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="بيوت شعر في جدة | مؤسسة الديار العالمية">
     <meta property="og:description" content="تصميم وتنفيذ بيوت شعر ملكية، بيوت شعر عربية، بيوت شعر للمجالس، بيوت شعر للحدائق بأفضل الخامات وأعلى معايير الجودة في جدة">
