--- a/byoot_shaar.html
+++ b/byoot_shaar.html
@@ -9,7 +9,9 @@
     <meta name="author" content="مؤسسة الديار العالمية">
     <meta name="robots" content="index, follow">
      <!-- روابط أيقونة الموقع (Favicon) -->
-    <link rel="icon" href="images/logo2.jpg" type="image/jpeg">
+     <link rel="icon" type="image/png" href="favicon-16x16.png">
+
+    <link rel="icon" href="favicon.ico" type="image/png">
     <link rel="shortcut icon" href="images/logo2.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="images/logo2.jpg">
     <meta name="theme-color" content="#DAA520">
