--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <meta name="geo.placename" content="Jeddah" />
     <meta name="geo.position" content="21.543333;39.172778" />
     <meta name="ICBM" content="21.543333, 39.172778" />
-
+        <!-- روابط الأيقونة (Favicon) -->
+    <link rel="icon" href="images/logo2.png" type="image/png">
+    <link rel="shortcut icon" href="images/logo2.png" type="image/png">
+    <link rel="apple-touch-icon" href="images/logo2.png">
+    <meta name="theme-color" content="#DAA520">
     <!-- Additional SEO Meta Tags -->
     <meta name="revisit-after" content="7 days">
     <meta name="rating" content="General">
