--- a/khayyam.html
+++ b/khayyam.html
@@ -8,6 +8,11 @@
     <meta name="keywords" content="خيام ملكية جدة, خيام أفراح, خيام مناسبات, خيام عزاء, خيام VIP, مؤسسة الديار العالمية">
     <meta name="author" content="مؤسسة الديار العالمية">
     <meta name="robots" content="index, follow">
+      <!-- روابط الأيقونة (Favicon) -->
+    <link rel="icon" href="images/logo2.png" type="image/png">
+    <link rel="shortcut icon" href="images/logo2.png" type="image/png">
+    <link rel="apple-touch-icon" href="images/logo2.png">
+    <meta name="theme-color" content="#DAA520">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="خيام ملكية في جدة | مؤسسة الديار العالمية">
