--- a/landscaping.html
+++ b/landscaping.html
@@ -8,7 +8,11 @@
     <meta name="keywords" content="تنسيق حدائق جدة, حدائق منزلية, تصميم حدائق, زراعة النجيل الطبيعي, زراعة النجيل الصناعي, نوافير وشلالات, مؤسسة الديار العالمية">
     <meta name="author" content="مؤسسة الديار العالمية">
     <meta name="robots" content="index, follow">
-    
+      <!-- روابط الأيقونة (Favicon) -->
+    <link rel="icon" href="images/logo2.png" type="image/png">
+    <link rel="shortcut icon" href="images/logo2.png" type="image/png">
+    <link rel="apple-touch-icon" href="images/logo2.png">
+    <meta name="theme-color" content="#DAA520">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="تنسيق حدائق في جدة | مؤسسة الديار العالمية">
     <meta property="og:description" content="تصميم وتنسيق الحدائق المنزلية والعامة بأحدث التقنيات وأفضل النباتات والديكورات في جدة">
