--- a/pergolas.html
+++ b/pergolas.html
@@ -8,7 +8,11 @@
     <meta name="keywords" content="برجولات جدة, برجولات خشبية, برجولات حديد, برجولات ألومنيوم, برجولات حدائق, مؤسسة الديار العالمية">
     <meta name="author" content="مؤسسة الديار العالمية">
     <meta name="robots" content="index, follow">
-    
+      <!-- روابط الأيقونة (Favicon) -->
+    <link rel="icon" href="images/logo2.png" type="image/png">
+    <link rel="shortcut icon" href="images/logo2.png" type="image/png">
+    <link rel="apple-touch-icon" href="images/logo2.png">
+    <meta name="theme-color" content="#DAA520">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="برجولات جدة | مؤسسة الديار العالمية">
     <meta property="og:description" content="تصميم وتنفيذ برجولات خشبية وحديدية وألومنيوم بأفضل الخامات وأعلى معايير الجودة في جدة">
