--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>إعادة التوجيه إلى الموقع الجديد</title>
-    <meta http-equiv="refresh" content="0; URL=http://الموقع-الجديد.com/">
+    <meta http-equiv="refresh" content="0; URL=http://aldeyarksa.tech">
     <link rel="canonical" href="http://aldeyarksa.tech/">
 </head>
 <body>
