--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="geo.placename" content="Jeddah" />
     <meta name="geo.position" content="21.543333;39.172778" />
     <meta name="ICBM" content="21.543333, 39.172778" />
+    <meta name="google-adsense-account" content="ca-pub-1049440105032359">
         <!-- روابط الأيقونة (Favicon) -->
     <link rel="icon" href="images/logo2.png" type="image/png">
     <link rel="shortcut icon" href="images/logo2.png" type="image/png">
