--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
             </div>
         </div>
     </header>
-
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1049440105032359"
+     crossorigin="anonymous"></script>
     <!-- السلايدر الرئيسي -->
     <section class="hero-slider">
         <div class="slider-container">
