--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="canonical" href="http://aldeyarksa.tech/">
 </head>
 <body>
-    <p>تم نقل الموقع إلى <a href="href="http://aldeyarksa.tech/">هذا الرابط</a>.</p>
+    <p>تم نقل الموقع إلى <a href="http://aldeyarksa.tech/">هذا الرابط</a>.</p>
 </body>
 </html>
