--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <link rel="canonical" href="https://www.aldeyarksa.tech" />
     <meta name="google-site-verification" content="yCNYjxZgyamu7OTnl1Bxzb_3VLDOaXdIqEKj2s18ZcE" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
@@ -509,4 +510,5 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
