--- a/khayyam.html
+++ b/khayyam.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <link rel="canonical" href="https://www.aldeyarksa.tech" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta name="description" content="خيام ملكية في جدة - مؤسسة الديار العالمية تقدم تصميم وتنفيذ خيام ملكية فاخرة، خيام أفراح، خيام مناسبات، خيام عزاء بأفضل الخامات وأعلى معايير الجودة">
@@ -420,3 +421,4 @@
     <script src="service-page.js"></script>
 </body>
 </html>
+
