--- a/landscaping.html
+++ b/landscaping.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <link rel="canonical" href="https://www.aldeyarksa.tech" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta name="description" content="تنسيق حدائق في جدة - مؤسسة الديار العالمية تقدم خدمات تصميم وتنسيق الحدائق المنزلية والعامة بأحدث التقنيات وأفضل النباتات والديكورات">
@@ -494,3 +495,4 @@
     <script src="service-page.js"></script>
 </body>
 </html>
+
