--- a/mazallat.html
+++ b/mazallat.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <link rel="canonical" href="https://www.aldeyarksa.tech" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta name="description" content="مظلات في جدة - مؤسسة الديار العالمية تقدم تصميم وتنفيذ مظلات سيارات، مظلات حدائق، مظلات مدارس ومظلات مسابح بأفضل الخامات وأعلى معايير الجودة">
@@ -422,3 +423,4 @@
     <button id="scrollToTopBtn" title="Go to top">↑</button>
 </body>
 </html>
+
