--- a/pergolas.html
+++ b/pergolas.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <link rel="canonical" href="https://www.aldeyarksa.tech" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <meta name="description" content="برجولات في جدة - مؤسسة الديار العالمية تقدم تصميم وتنفيذ برجولات خشبية وحديدية وألومنيوم بأفضل الخامات وأعلى معايير الجودة">
@@ -474,4 +475,5 @@
     <script src="service-page.js"></script>
 </body>
 </html>
+
 
