--- a/sawater.html
+++ b/sawater.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_SA">
     
-    <link rel="canonical" href="https://aldeyar.me/sawater.html" />
+     <link rel="canonical" href="https://www.aldeyarksa.tech" />
     <title>سواتر جدة | مؤسسة الديار العالمية</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -417,3 +417,4 @@
     <script src="service-page.js"></script>
 </body>
 </html>
+
