--- a/pergolas.html
+++ b/pergolas.html
@@ -21,7 +21,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ar_SA">
     
-    <link rel="canonical" href="https://aldeyar.me/pergolas.html" />
+    <link rel="canonical" href="https://www.aldeyarksa.tech" />
     <title>برجولات جدة | مؤسسة الديار العالمية</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
  
@@ -475,5 +475,6 @@
     <script src="service-page.js"></script>
 </body>
 </html>
+
 
 
