Update and rename index.html33 to index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>إعادة التوجيه إلى الموقع الجديد</title>
     <meta http-equiv="refresh" content="0; URL=http://aldeyarksa.tech">
-    <link rel="canonical" href="http://aldeyarksa.tech/">
+    <link rel="canonical" href="http://www.aldeyarksa.tech/">
 </head>
 <body>
-    <p>تم نقل الموقع إلى <a href="http://aldeyarksa.tech/">هذا الرابط</a>.</p>
+    <p>تم نقل الموقع إلى <a href="http://www.aldeyarksa.tech/">هذا الرابط</a>.</p>
 </body>
 </html>
