--- a/landscaping.html
+++ b/landscaping.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>إعادة التوجيه إلى الموقع الجديد</title>
     <meta http-equiv="refresh" content="0; URL=http://aldeyarksa.tech">
-    <link rel="canonical" href="https://aldeyarksa.tech/">
+    <link rel="canonical" href="https://www.aldeyarksa.tech/services/landscaping">
 </head>
 <body>
-    <p>تم نقل الموقع إلى <a href="https://aldeyarksa.tech/">هذا الرابط</a>.</p>
+    <p>تم نقل الموقع إلى <a href="https://www.aldeyarksa.tech/services/landscaping">هذا الرابط</a>.</p>
 </body>
 </html>
